fetchData from database

--- a/iOSShop/Base.lproj/Main.storyboard
+++ b/iOSShop/Base.lproj/Main.storyboard
@@ -73,13 +73,49 @@
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="macbook-1" translatesAutoresizingMaskIntoConstraints="NO" id="w97-Qw-q3V">
                                                     <rect key="frame" x="0.0" y="0.0" width="374" height="333"/>
                                                 </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OU5-e8-YuU">
+                                                    <rect key="frame" x="0.0" y="354" width="211" height="38"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="38" id="OQr-kD-gE8"/>
+                                                        <constraint firstAttribute="width" constant="211" id="grm-xl-K9j"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OVU-6T-9fr">
+                                                    <rect key="frame" x="0.0" y="417" width="211" height="38"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="211" id="Law-q6-TJH"/>
+                                                        <constraint firstAttribute="height" constant="38" id="hZ5-Va-jdV"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Yl-YL-Pkg">
+                                                    <rect key="frame" x="268" y="384" width="106" height="38"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="106" id="Utf-TP-09Q"/>
+                                                        <constraint firstAttribute="height" constant="38" id="jWf-eL-h8z"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="OVU-6T-9fr" secondAttribute="bottom" constant="18" id="Baw-LV-BlI"/>
+                                                <constraint firstItem="OU5-e8-YuU" firstAttribute="leading" secondItem="w8a-82-tXj" secondAttribute="leading" id="Cgm-fY-WfQ"/>
                                                 <constraint firstItem="w97-Qw-q3V" firstAttribute="top" secondItem="w8a-82-tXj" secondAttribute="top" id="F1e-6Q-Lg7"/>
+                                                <constraint firstItem="OU5-e8-YuU" firstAttribute="top" secondItem="w97-Qw-q3V" secondAttribute="bottom" constant="21" id="Ifb-j7-kPh"/>
+                                                <constraint firstItem="OVU-6T-9fr" firstAttribute="leading" secondItem="w8a-82-tXj" secondAttribute="leading" id="OGu-CF-JHz"/>
                                                 <constraint firstAttribute="bottom" secondItem="w97-Qw-q3V" secondAttribute="bottom" constant="140" id="Qld-G5-ehY"/>
                                                 <constraint firstAttribute="trailing" secondItem="w97-Qw-q3V" secondAttribute="trailing" id="aK3-Uc-7Ap"/>
                                                 <constraint firstItem="w97-Qw-q3V" firstAttribute="leading" secondItem="w8a-82-tXj" secondAttribute="leading" id="d2Z-g9-V7S"/>
+                                                <constraint firstAttribute="trailing" secondItem="1Yl-YL-Pkg" secondAttribute="trailing" id="dtH-Rv-ral"/>
+                                                <constraint firstItem="1Yl-YL-Pkg" firstAttribute="top" secondItem="w97-Qw-q3V" secondAttribute="bottom" constant="51" id="w2O-Zd-Wx8"/>
                                             </constraints>
                                         </view>
                                     </subviews>
@@ -93,6 +129,9 @@
                                 <connections>
                                     <outlet property="backgroundCellView" destination="w8a-82-tXj" id="Xp8-3s-s21"/>
                                     <outlet property="imageViewCell" destination="w97-Qw-q3V" id="YOa-NC-jpM"/>
+                                    <outlet property="modelLabel" destination="OVU-6T-9fr" id="0Vs-G5-blI"/>
+                                    <outlet property="nameLabel" destination="OU5-e8-YuU" id="Y1p-Ie-rjM"/>
+                                    <outlet property="priceLabel" destination="1Yl-YL-Pkg" id="j4R-Yu-tSB"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
