--- a/iOSShop/Base.lproj/Main.storyboard
+++ b/iOSShop/Base.lproj/Main.storyboard
@@ -74,7 +74,7 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="374" height="333"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OU5-e8-YuU">
-                                                    <rect key="frame" x="0.0" y="354" width="211" height="25"/>
+                                                    <rect key="frame" x="8" y="353" width="211" height="25"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="25" id="OQr-kD-gE8"/>
                                                         <constraint firstAttribute="width" constant="211" id="grm-xl-K9j"/>
@@ -93,18 +93,8 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OuO-x3-YAC">
-                                                    <rect key="frame" x="0.0" y="430" width="211" height="35"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="35" id="Eu5-la-jtI"/>
-                                                        <constraint firstAttribute="width" constant="211" id="ScP-2t-DfM"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="28"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OVU-6T-9fr">
-                                                    <rect key="frame" x="0.0" y="392" width="211" height="30"/>
+                                                    <rect key="frame" x="8" y="388" width="211" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="211" id="Law-q6-TJH"/>
                                                         <constraint firstAttribute="height" constant="30" id="hZ5-Va-jdV"/>
@@ -113,17 +103,27 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OuO-x3-YAC">
+                                                    <rect key="frame" x="8" y="426" width="211" height="35"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="35" id="Eu5-la-jtI"/>
+                                                        <constraint firstAttribute="width" constant="211" id="ScP-2t-DfM"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="28"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <color key="backgroundColor" systemColor="systemGray3Color"/>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="OVU-6T-9fr" secondAttribute="bottom" constant="51" id="Baw-LV-BlI"/>
-                                                <constraint firstAttribute="bottom" secondItem="OuO-x3-YAC" secondAttribute="bottom" constant="8" id="Bq9-P5-aPl"/>
-                                                <constraint firstItem="OU5-e8-YuU" firstAttribute="leading" secondItem="w8a-82-tXj" secondAttribute="leading" id="Cgm-fY-WfQ"/>
+                                                <constraint firstAttribute="bottom" secondItem="OVU-6T-9fr" secondAttribute="bottom" constant="55" id="Baw-LV-BlI"/>
+                                                <constraint firstAttribute="bottom" secondItem="OuO-x3-YAC" secondAttribute="bottom" constant="12" id="Bq9-P5-aPl"/>
+                                                <constraint firstItem="OU5-e8-YuU" firstAttribute="leading" secondItem="w8a-82-tXj" secondAttribute="leading" constant="8" id="Cgm-fY-WfQ"/>
                                                 <constraint firstItem="w97-Qw-q3V" firstAttribute="top" secondItem="w8a-82-tXj" secondAttribute="top" id="F1e-6Q-Lg7"/>
-                                                <constraint firstItem="OU5-e8-YuU" firstAttribute="top" secondItem="w97-Qw-q3V" secondAttribute="bottom" constant="21" id="Ifb-j7-kPh"/>
-                                                <constraint firstItem="OVU-6T-9fr" firstAttribute="leading" secondItem="w8a-82-tXj" secondAttribute="leading" id="OGu-CF-JHz"/>
+                                                <constraint firstItem="OU5-e8-YuU" firstAttribute="top" secondItem="w97-Qw-q3V" secondAttribute="bottom" constant="20" id="Ifb-j7-kPh"/>
+                                                <constraint firstItem="OVU-6T-9fr" firstAttribute="leading" secondItem="w8a-82-tXj" secondAttribute="leading" constant="8" id="OGu-CF-JHz"/>
                                                 <constraint firstAttribute="bottom" secondItem="w97-Qw-q3V" secondAttribute="bottom" constant="140" id="Qld-G5-ehY"/>
-                                                <constraint firstItem="OuO-x3-YAC" firstAttribute="leading" secondItem="w8a-82-tXj" secondAttribute="leading" id="Ryb-kE-7DM"/>
+                                                <constraint firstItem="OuO-x3-YAC" firstAttribute="leading" secondItem="w8a-82-tXj" secondAttribute="leading" constant="8" id="Ryb-kE-7DM"/>
                                                 <constraint firstAttribute="trailing" secondItem="w97-Qw-q3V" secondAttribute="trailing" id="aK3-Uc-7Ap"/>
                                                 <constraint firstItem="w97-Qw-q3V" firstAttribute="leading" secondItem="w8a-82-tXj" secondAttribute="leading" id="d2Z-g9-V7S"/>
                                                 <constraint firstAttribute="trailing" secondItem="1Yl-YL-Pkg" secondAttribute="trailing" id="dtH-Rv-ral"/>
